MyDevOrg/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <label>Contact Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRJ{00000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>